# swigzinc

./: .gitignore  CMakeLists.txt  README.rst
.github/workflows/: github-deploy.yml  osmesa-swigzinc.yaml  test-wheels.yml
cmake/: TestUndefinedSymbolsAllowed.cmake  environmentchecks.cmake
res/: CMakeLists.txt  pyproject.toml  scrape_zinc_version.py  setup.py  setup_linux.sh
src/: CMakeLists.txt
src/interface/: context.i  differentialoperator.i  doublevaluesarraytypemap.i  element.i  field.i  fieldarraytypemap.i  fieldassignment.i  fieldcache.i  fieldmodule.i  fieldoperators.i  fieldparameters.i  fieldrange.i  fieldsmoothing.i  font.i  glyph.i  graphics.i  integervaluesarraytypemap.i  light.i  logger.i  material.i  node.i  optimisation.i  pyzincstringhandling.i  region.i  result.i  scene.i  scenecoordinatesystem.i  scenefilter.i  scenepicker.i  sceneviewer.i  sceneviewerinput.i  selection.i  shader.i  spectrum.i  status.i  stream.i  streamimage.i  streamregion.i  streamscene.i  tessellation.i  (+3 more)
src/python/: CMakeLists.txt  InstallConfig.cmake  MANIFEST.in  README.txt  setup.in.py
tests/: CMakeLists.txt
tests/python/: CMakeLists.txt  TestVirtualenv.cmake  runalltests.py
tests/python/field_tests/: applytests.py  compositetests.py  fieldmodulenotifiertests.py  fieldrangetests.py  fieldtests.py  grouptests.py  sceneviewerprojectionfieldtests.py  vectoroperatortests.py
tests/python/graphics_tests/: graphicstests.py
tests/python/imageprocessing_tests/: imagefilterbinarythresholdtests.py  imagefilterconnectedthresholdtests.py  imagefilterdiscretegaussiantests.py  imagefilterhistogramtests.py  imagefiltermeantests.py  imagefilterthresholdtests.py  imageprocessingtests.py
tests/python/import_tests/: importtests.py
tests/python/logger_tests/: loggertests.py
tests/python/material_tests/: materialtests.py
tests/python/region_tests/: regiontests.py
tests/python/sceneviewer_tests/: sceneviewertests.py
